--- a/BarcodeLabelPrinringWebClient/angular.json
+++ b/BarcodeLabelPrinringWebClient/angular.json
@@ -1,6 +1,9 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
+  "cli": {
+    "defaultCollection": "@angular-eslint/schematics"
+  },
   "newProjectRoot": "projects",
   "projects": {
     "BarcodeLabelPrinringWebClient": {
@@ -32,7 +35,8 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/lr-theme.scss"
             ],
             "scripts": []
           },
@@ -101,9 +105,19 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-              "src/styles.scss"
+              "src/styles.scss",
+              "src/lr-theme.scss"
             ],
             "scripts": []
+          }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
           }
         }
       }
