--- a/BarcodeLabelPrinting/packages.config
+++ b/BarcodeLabelPrinting/packages.config
@@ -21,6 +21,7 @@
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
   <package id="NPOI" version="2.5.5" targetFramework="net452" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net452" />
+  <package id="PDFsharp-MigraDoc" version="1.50.5147" targetFramework="net452" />
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net452" />
   <package id="SharpZipLib" version="1.3.2" targetFramework="net452" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net452" />
