--- a/BarcodeLabelPrinting/Web.config
+++ b/BarcodeLabelPrinting/Web.config
@@ -16,14 +16,16 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="autoFormsAuthentication" value="true" />
     <add key="enableSimpleMembership" value="true" />
+    <add key="frontEndDomen" value="http://localhost:4200"/>
   </appSettings>
   <system.web>
     <authentication mode="Windows" />
-    <authorization>
-      <allow users="*"/>
-    </authorization>
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
+    <authorization>
+      <allow users="SPRWEB\nikita, PANOV\barcode" />
+      <deny users="*" />
+    </authorization>
   </system.web>
   <system.webServer>
     <handlers>
