fixed debug routing fixed style fixed nds fixed arcicle position

--- a/BarcodeLabelPrinting/Web.config
+++ b/BarcodeLabelPrinting/Web.config
@@ -24,7 +24,7 @@
     <httpRuntime targetFramework="4.5.2" />
     <authorization>
       <allow users="SPRWEB\nikita, PANOV\barcode" />
-      <deny users="*" />
+      <allow users="*" />
     </authorization>
   </system.web>
   <system.webServer>
