--- a/BarcodeLabelPrinting/packages.config
+++ b/BarcodeLabelPrinting/packages.config
@@ -6,8 +6,16 @@
   <package id="EntityFramework" version="6.2.0" targetFramework="net452" />
   <package id="jQuery" version="3.4.1" targetFramework="net452" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights" version="2.20.0" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.20.0" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.PerfCounterCollector" version="2.20.0" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.Web" version="2.20.0" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.20.0" targetFramework="net452" />
+  <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.20.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net452" />
+  <package id="Microsoft.AspNet.TelemetryCorrelation" version="1.0.8" targetFramework="net452" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.7" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net452" />
@@ -25,9 +33,11 @@
   <package id="PDFsharp-MigraDoc" version="1.50.5147" targetFramework="net452" />
   <package id="Portable.BouncyCastle" version="1.8.9" targetFramework="net452" />
   <package id="SharpZipLib" version="1.3.2" targetFramework="net452" />
-  <package id="System.Buffers" version="4.4.0" targetFramework="net452" />
-  <package id="System.Memory" version="4.5.0" targetFramework="net452" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.0" targetFramework="net452" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net452" />
+  <package id="System.Diagnostics.DiagnosticSource" version="5.0.0" targetFramework="net452" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net452" />
   <package id="System.ValueTuple" version="4.3.0" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
   <package id="ZXing.Net" version="0.16.8" targetFramework="net452" />
